# cpp-utils

./: CMakeLists.txt  readme.md  run.bat
tests/: CMakeLists.txt  tests.cpp
utils/: CMakeLists.txt
utils/include/: asyncresult.h  conversions.h  crtphelper.h  csvfile.h  definitions.h  error.h  file.h  objectpool.h  result.h  system.h  threadpool.h  types.h
